<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="cost_of_service">Cost of service.</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="ok_15">Ok (15%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="round_up">Round Up</string>
    <string name="calculate_tip">Calculate Tip</string>
    <string name="final_output">Tips: %s</string>
    <string name="error_output">Tips: ERROR</string>
    <string name="please_enter_a_the_price">Please, Enter a the price!</string>
</resources>